# rekall

./: .gitignore  .vulture_whitelist.py  AUDIT_REMEDIATION_PLAN.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
audits/: ameliorations-fonctionnelles-2025-12-12-v0.3.0.md  audit-2025-12-12-v0.3.0-complet.md  audit-2025-12-12-v0.3.0.md  audit-2025-12-13-1716-CET-v0.3.0.md  best-practices-hooks-claude-code-cli-2025-12-12.md  meilleurs-hooks-claude-code-references-2025-12-12.md
audits/_webcache/: brave_search_hooks.html  ddg_hooks.html
docs/: README.md  architecture.md  getting-started.md  mcp-integration.md  textual-css-patterns.md  usage.md
docs/architecture/: strategy-context.md
docs/decisions/: ADR-001-code-modularization.md  ADR-020-sqlite-vec-choice.md
docs/images/: CAPTURE-GUIDE.md  PROMPTS.md
docs/plans/: 2025-12-11-sources-enhancements-design.md  2025-12-11-sources-medallion-design.md
rekall/: __init__.py  __main__.py  archive.py  autoscan.py  backup.py  cache.py  cli.py  cli_main.py  config.py  consolidation.py  constants.py  context_extractor.py  db.py  embeddings.py  enrichment.py  exporters.py  git_detector.py  i18n.py  link_rot.py  mcp_server.py  model_manager.py  models.py  paths.py  promotion.py  serializers.py  sync.py  temporal.py  tui.py  tui_main.py  utils.py  validators.py  vector_index.py
rekall/cli/: __init__.py  core.py  entries.py  helpers.py  import_export.py  inbox.py  knowledge_graph.py  memory.py  research.py  sources.py  staging.py  system.py
rekall/connectors/: __init__.py  base.py  claude_cli.py  cursor.py
rekall/data/: __init__.py
rekall/hooks/: __init__.py  models.py
rekall/infra/: __init__.py  container.py  defaults.py  interfaces.py
rekall/integrations/: __init__.py
rekall/migration/: __init__.py  speckit_parser.py
rekall/research/: 01-ai-agents-agentic-ai.md  02-roi-business-value.md  03-cognitive-load-productivity.md  04-architectures-patterns.md  05-knowledge-management.md  06-security-compliance.md  07-frontend-design-systems.md  08-testing-quality.md  09-devops-infrastructure.md  10-data-privacy.md  README.md
rekall/services/: __init__.py  entries.py  sources.py
rekall/transcript/: __init__.py  detector.py  models.py  parser_base.py  parser_claude.py  parser_cline.py  parser_continue.py  parser_generic.py  session_manager.py
rekall/ui/: __init__.py  app.py  helpers.py  theme.py
specs/001-python-cli-package/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-export-import-sync/: data-model.md  spec.md  tasks.md
specs/003-xdg-install-paths/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cognitive-memory/: data-model.md  implementation.md  plan.md  progressive-disclosure.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-db-maintenance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-smart-embeddings/: data-model.md  implementation.md  plan.md  research.md  spec.md  tasks.md
specs/006-enriched-context/: implementation.md  plan-phase2.md  plan.md  research.md  spec.md  strategy.md  tasks.md
specs/007-migration-maintenance/: plan.md  spec.md  tasks.md
specs/008-browse-delete-entry/: implementation.md  plan.md  spec.md  tasks.md
specs/009-sources-integration/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-sources-autonomes/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-knowledge-base-menu/: implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-sources-organisation/: implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-sources-medallion/: data-model.md  implementation.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-srs-finalization/: spec.md
specs/015-mcp-tools-expansion/: plan.md  research.md  spec.md  tasks.md
specs/016-audit-remediation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-code-modularization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-auto-context-capture/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-multi-ide-integration/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-embedding-perf/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-ai-source-enrichment/: data-model.md  quickstart.md  research-exhaustive.md  research.md  spec.md  tasks.md
specs/022-open-core/: data-model.md  implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-tui-validated-entries/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-cartae-format-migration/: spec.md
specs/025-skos-basic-taxonomy/: spec.md
specs/026-cognitive-memory-docs/: spec.md
specs/027-export-import-advanced/: spec.md
specs/028-plugin-system/: spec.md
specs/029-cli-tui-improvements/: spec.md
tests/: conftest.py  test_archive.py  test_article99_versions.py  test_cache.py  test_cli.py  test_cli_hooks.py  test_config_screen.py  test_consolidation.py  test_context_extractor.py  test_db.py  test_embeddings_service.py  test_enrichment.py  test_exporters.py  test_git_detector.py  test_ide_detection.py  test_integration_sources.py  test_integrations.py  test_mcp_auto_capture.py  test_model_manager.py  test_models.py  test_paths.py  test_promotion.py  test_security.py  test_sync.py  test_temporal.py  test_transcript_parsers.py  test_tui.py  test_tui_enriched.py  test_validators.py  test_vector_index.py
tests/test_connectors/: test_claude_cli.py  (+1 more)
(+90 files in other folders)
