[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rekall"
version = "0.3.0"
description = "Rekall - Developer Knowledge Management. Capture and retrieve bugs, patterns, decisions."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rekall Contributors"}
]
keywords = ["cli", "knowledge-management", "developer-tools", "memory", "bugs", "patterns", "total-recall"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.89.0",
    "prompt_toolkit>=3.0.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "vulture>=2.11",
    "tomli-w>=1.0.0",
]

[project.scripts]
rekall = "rekall.cli:app"

[project.urls]
Homepage = "https://github.com/guthubrx/rekall"
Documentation = "https://github.com/guthubrx/rekall#readme"
Repository = "https://github.com/guthubrx/rekall"
Issues = "https://github.com/guthubrx/rekall/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rekall*"]

[tool.setuptools.package-data]
rekall = ["research/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear (common bugs)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python)
    "PL",     # Pylint
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",     # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments (CLI commands have many options)
    "PLR2004",  # Magic value comparison
    "PLR0912",  # Too many branches (complex CLI logic)
    "PLR0911",  # Too many return statements
    "PLR0915",  # Too many statements (complex TUI handlers)
    "S101",     # Assert used (OK in tests)
    "B008",     # Function call in default arg (Typer pattern)
    "PLC0415",  # Import not at top-level (lazy imports for perf/circular deps)
    "PLW0603",  # Global statement (config/db singleton pattern)
    "PLW2901",  # Loop variable overwritten (intentional normalization)
    "N806",     # Variable in function should be lowercase (constants in function OK)
    "N818",     # Exception should have Error suffix (legacy naming)
    "B007",     # Loop variable not used (unpacking pattern)
    "B904",     # raise without from (TODO: fix for better traceability)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"__init__.py" = ["F401"]
# Security false positives + silent exception handling
"rekall/db.py" = ["S608", "S110", "S112"]
"rekall/exporters.py" = ["S608"]
# TUI has complex error handling, some try/except/pass is intentional
"rekall/tui.py" = ["S110", "S112", "S607"]
# i18n has intentional try/except/pass for locale fallbacks
"rekall/i18n.py" = ["S110", "S112"]
# CLI has intentional silent exception handling for optional features
"rekall/cli.py" = ["S110"]

[tool.vulture]
min_confidence = 80
paths = ["rekall/"]
